@@ -86,14 +86,20 @@
       
     <h3>Latest release</h3>
       <div class="download">
+      <a href="http://download.gnome.org/sources/tomboy/0.7/tomboy-0.7.1.tar.gz"
+      title="Source code of the latest stable release">
+      <img src="./images/package-x-generic.png" alt="source package" />
+      Tomboy 0.7.1</a></div>
+
+      <!--<p>There is currently no separate development release.</p>-->
+      
+    <h3>Past releases</h3>
+      <div class="download">
       <a href="http://download.gnome.org/sources/tomboy/0.7/tomboy-0.7.0.tar.gz"
       title="Source code of the latest stable release">
       <img src="./images/package-x-generic.png" alt="source package" />
       Tomboy 0.7.0</a></div>
 
-      <!--<p>There is currently no separate development release.</p>-->
-      
-    <h3>Past releases</h3>
       <div class="download">
       <a href="http://download.gnome.org/sources/tomboy/0.5/tomboy-0.5.9.tar.gz"
       title="Source code of the latest stable release">
