@@ -71,6 +71,15 @@
         <div id="news">
 	    <h2 class="">News</h2>
 
+	    <h3>May 14th 2007</h3>
+   	      <b>Unstable</b> version 0.7.1 released!  New in this release:
+   	      <ul>
+   	        <li>Reopen opened notes at startup</li>
+   	        <li>Fix to use GNOME Document font by default</li>
+   	        <li>And <a href="http://svn.gnome.org/viewcvs/tomboy/tags/TOMBOY_0_7_1/NEWS?view=markup">more</a></li>
+              </ul>
+   	      <a href="download.html">Download it</a>
+
 	    <h3>April 23rd 2007</h3>
    	      <b>Unstable</b> version 0.7.0 released!  New in this release:
    	      <ul>
