@@ -1,3 +1,8 @@
+2007-05-16  Sandy Armstrong  <sanfordarmstrong@gmail.com>
+
+	* index.html: Updated for 0.7.1 release.
+	* download.html: Ditto.
+
 2007-04-23  Sandy Armstrong  <sanfordarmstrong@gmail.com>
 
 	* plugins.html: Fixed broken link to wiki.
